--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "dev": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test"
   },
   "prettier": {
     "printWidth": 100,
@@ -22,19 +22,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/common": "^21.0.0-next.3",
+    "@angular/compiler": "^21.0.0-next.3",
+    "@angular/core": "^21.0.0-next.3",
+    "@angular/forms": "^21.0.0-next.3",
+    "@angular/platform-browser": "^21.0.0-next.3",
+    "@angular/router": "^21.0.0-next.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.1",
-    "@angular/cli": "^20.3.1",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular-devkit/core": "^21.0.0-next.3",
+    "@angular-devkit/schematics": "^21.0.0-next.3",
+    "@angular/build": "^21.0.0-next.3",
+    "@angular/cli": "^21.0.0-next.3",
+    "@angular/compiler-cli": "^21.0.0-next.3",
+    "@nx/angular": "21.5.2",
+    "@nx/workspace": "21.5.2",
+    "@schematics/angular": "^21.0.0-next.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
@@ -42,6 +47,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "21.5.2",
     "typescript": "~5.9.2"
   }
 }
